<resources>
    <string name="app_name">Scrub My Ride</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="homepage_fragment_label">Home Page Fragment</string>
    <string name="washchoice_fragment_label">Wash Choice Fragment</string>
    <string name="address_fragment_label">Address Choice Fragment</string>
    <string name="cleanerchoice_fragment_label">Cleaner Choice Fragment</string>
    <string name="date_fragment_label">Date Choice Fragment</string>
    <string name="payment_label">Payment Fragment</string>

    <string name="btn_next">Next</string>
    <string name="btn_previous">Previous</string>
    <string name="btn_close">Close</string>
    <string name="btn_logout">Sign out</string>
    <string name="btn_save">Save</string>

    <string name="txt_appDesc">Scrub My Ride</string>
    <string name="btn_booking">Book a car wash</string>
    <string name="btn_signin">Sign in</string>
    <string name="btn_signup">Sign up</string>
    <string name="btn_login">Login</string>
    <string name="img_logo">Scrub My Ride Logo</string>

    <string name="btn_cleanerLogin">Login as a cleaner</string>
    <string name="btn_userLogin">Login as a user</string>

    <string name="btn_cleanerSignup">Sign up as a cleaner</string>
    <string name="btn_userSignup">Sign up as a user</string>
    <string name="txt_becomeCustomer">Become a customer today!</string>
    <string name="btn_register">Not yet a customer? Click here</string>


    <string name="txt_carReg">Car registration number</string>
    <string name="txt_carRegHint">Enter your car registration number here</string>
    <string name="txt_washType">What type of car wash are you looking for?</string>
    <string name="txt_outsideWash">Outside wash</string>
    <string name="txt_outInWash">Outside wash and Inside clean</string>
    <string name="txt_insideWash">Inside clean</string>

    <string name="txt_postCode">Find your address by postcode</string>
    <string name="input_enterPostCode">Enter your postcode here</string>
    <string name="txt_selectAddress">Select your address from the list</string>

    <string name="txt_selectCleaners">Choose a cleaner from the ones available below</string>
    <string name="txt_selectTime">Select a timeframe for when the cleaner can come</string>

    <string name="txt_selectDate">Select a date and time for the cleaner to come</string>

    <string name="txt_selectPayment">Review your booking</string>
    <string name="btn_pay">Book your car wash</string>

    <string name="txt_forgotPassword">Forgot password?</string>
    <string name="input_phoneNumberEnter">Enter your phone number</string>
    <string name="input_passwordEnter">Enter your password</string>
    <string name="input_address">Enter your address</string>
    <string name="txt_loginCustomerPage">Customer Login Page</string>
    <string name="txt_loginCleanerPage">Cleaner Login Page</string>

    <string name="txt_name"> </string>
    <string name="txt_timetable">My current bookings</string>
    <string name="btn_scheduleWork">Schedule Work</string>
    <string name="btn_setWashType">Set your fees</string>
    <string name="btn_editDetails">Edit my details</string>

    <string name="txt_becomeWasher">Become a car cleaner today!</string>
    <string name="input_firstName">First name</string>
    <string name="input_lastName">Last name</string>
    <string name="input_phoneNumber">Phone number</string>
    <string name="input_email">Email</string>
    <string name="input_postCode">Post Code</string>
    <string name="input_editAddress">Address</string>
    <string name="input_carReg">Car registration number</string>
    <string name="input_password">Password</string>
    <string name="input_newPassword">New password</string>
    <string name="input_changePassword">Change your password</string>
    <string name="input_passwordConfirm">Confirm password</string>
    <string name="txt_registerCustomerPage">Customer Register Page</string>
    <string name="txt_registerCleanerPage">Cleaner Register Page</string>
    <string name="txt_registerChoicePage">Register as a customer or a cleaner</string>
    <string name="txt_LoginChoicerPage">Login as a customer or a cleaner</string>

    <string name="txt_checkAddress">Edit or verify the address below</string>

    <string name="txt_poundSign">£</string>

    <string name="txt_myDetails">Edit my details</string>
    <string name="txt_btnSaveAll">Save all changes</string>

    <string name="txt_scheduleCalendar">Schedule my calendar</string>
    <string name="txt_chooseWorkingHours">Choose your working hours</string>
    <string name="txt_monday">Mon</string>
    <string name="txt_tuesday">Tue</string>
    <string name="txt_wednesday">Wed</string>
    <string name="txt_thursday">Thu</string>
    <string name="txt_friday">Fri</string>
    <string name="txt_saturday">Sat</string>
    <string name="txt_sunday">Sun</string>
    <string name="txt_addDate">Add working day schedule</string>
    <string name="txt_timeStart">Start shift</string>
    <string name="txt_timeEnd">End shift</string>

    <string name="txt_enterPrice">00.00</string>

    <string name="txt_desc">Write a short description about yourself</string>
    <string name="input_desc">Description</string>
    <string name="txt_verifyEmail">Please verify your email so you can start taking on bookings!</string>

    <string name="txt_email">Your invoice will be sent to the email below</string>

    <string name="txt_popupInfo">Date Information</string>



</resources>