<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|top"
        android:orientation="horizontal">

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btn_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@color/red"
            android:text="@string/btn_logout" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|center_horizontal|center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_name" />

        <TextView
            android:id="@+id/txt_timeTable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_timetable"
            android:textSize="24sp" />

        <com.skyhope.eventcalenderlibrary.CalenderEvent
            android:id="@+id/calender_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:calender_background="@color/divider" />

        <Button
            android:id="@+id/btn_scheduleWork"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@color/accentColor"
            android:text="@string/btn_scheduleWork" />

        <Button
            android:id="@+id/btn_setWashType"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@color/colorAccent"
            android:text="@string/btn_setWashType" />

        <Button
            android:id="@+id/btn_editDetails"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@color/accentColor"
            android:text="@string/btn_editDetails" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>