<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".booking.WashChoiceFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:gravity="center|top"
        android:orientation="horizontal">

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btn_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@color/red"
            android:text="@string/btn_close" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|center_horizontal|center_vertical"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="250dp"
            android:layout_height="150dp"
            android:contentDescription="@string/img_logo"
            app:srcCompat="@drawable/logo" />

        <Button
            android:id="@+id/btn_userSignup"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@color/accentColor"
            android:text="@string/btn_userSignup" />

        <Button
            android:id="@+id/btn_cleanerSignup"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="@color/accentColor"
            android:text="@string/btn_cleanerSignup" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>